--- a/index.html
+++ b/index.html
@@ -49,4 +49,177 @@
         "logo": "https://www.dorpsedeugniet.com/images/logo.png",
         "address": {
             "@type": "PostalAddress",
-            "addressLocality": "Reeuwijk
+            "addressLocality": "Reeuwijk",
+            "addressCountry": "NL"
+        },
+        "contactPoint": {
+            "@type": "ContactPoint",
+            "email": "jaspervdz@me.com",
+            "contactType": "Customer Service"
+        },
+        "sameAs": [
+            "https://www.facebook.com/dorpsedeugniet",
+            "https://www.instagram.com/dorpsedeugniet",
+            "https://www.twitter.com/dorpsedeugniet"
+        ],
+        "makesOffer": {
+            "@type": "Offer",
+            "itemOffered": {
+                "@type": "Product",
+                "name": "Artesian Dutch Beer",
+                "description": "Small-batch artesian beer brewed in Reeuwijk, Netherlands, using premium ingredients.",
+                "category": "Craft Beer"
+            }
+        }
+    }
+    </script>
+
+    <!-- Breadcrumb Schema -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+            {
+                "@type": "ListItem",
+                "position": 1,
+                "name": "Home",
+                "item": "https://www.dorpsedeugniet.com/"
+            },
+            {
+                "@type": "ListItem",
+                "position": 2,
+                "name": "Our Beers",
+                "item": "https://www.dorpsedeugniet.com/#beers"
+            },
+            {
+                "@type": "ListItem",
+                "position": 3,
+                "name": "Brewing Process",
+                "item": "https://www.dorpsedeugniet.com/#process"
+            },
+            {
+                "@type": "ListItem",
+                "position": 4,
+                "name": "Contact",
+                "item": "https://www.dorpsedeugniet.com/#contact"
+            }
+        ]
+    }
+    </script>
+</head>
+<body>
+
+    <header>
+        <a href="/" class="logo">
+            <img src="/images/logo.png" alt="Dorpsedeugniet Logo" class="logo-img">
+        </a>
+        <h1>Dorpsedeugniet - Artesian Beer Brewing in the Netherlands</h1>
+    </header>
+
+    <nav role="navigation" aria-label="Main navigation">
+        <a href="#home">Home</a>
+        <a href="#beers">Our Beers</a>
+        <a href="#process">Brewing Process</a>
+        <a href="#contact">Contact</a>
+    </nav>
+
+    <div class="breadcrumbs" aria-label="Breadcrumb navigation">
+        <a href="#home">Home</a> > <a href="#beers">Our Beers</a> > <a href="#process">Brewing Process</a> > <a href="#contact">Contact</a>
+    </div>
+
+    <main>
+        <section id="home" class="hero" aria-label="Hero section">
+            <h2>Artesian Beer Brewing in Reeuwijk, Netherlands</h2>
+            <p>Experience the rich flavors of Dorpsedeugniet’s hand-crafted beers, brewed with passion and tradition in the heart of the Netherlands. Our small-batch brewing process in Reeuwijk ensures every sip is a taste of Dutch craftsmanship.</p>
+            <a href="#beers"><button aria-label="Discover our beers">Discover Our Beers</button></a>
+            <!-- Fallback for hero image -->
+            <img src="/images/dutch-canal-landscape.jpg" alt="Dutch canal landscape with windmill in Reeuwijk" class="hero-fallback" loading="lazy">
+        </section>
+
+        <section id="beers" class="content-section">
+            <h2>Our Exceptional Artesian Beer Brewing Process</h2>
+            <p>We believe in quality over quantity. Our small-batch brewing process in Reeuwijk ensures every beer is crafted with the finest ingredients and meticulous attention to detail, making Dorpsedeugniet a standout in artesian beer brewing in the Netherlands.</p>
+
+            <div class="grid-container">
+                <div class="grid-item">
+                    <img src="/images/beer-with-hops.jpg" alt="Glass of beer with hops showcasing Dorpsedeugniet's finest ingredients" loading="lazy">
+                    <h3>Finest Ingredients</h3>
+                    <p>We source only the best hops, malts, and yeast to create beers of exceptional quality, ensuring every bottle reflects the rich heritage of Dutch brewing.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="/images/brewing-scene.jpg" alt="Brewing scene with beer and wheat at Dorpsedeugniet brewery" loading="lazy">
+                    <h3>Expert Brewing</h3>
+                    <p>Our brewers use time-honored techniques and modern innovation to craft unique and flavorful beers, blending tradition with creativity in Reeuwijk.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="/images/beer-aging-scene.jpg" alt="Beer aging scene with wheat at Dorpsedeugniet brewery in Reeuwijk" loading="lazy">
+                    <h3>Careful Aging</h3>
+                    <p>We allow our beers to mature, developing their full potential and complex flavor profiles, a hallmark of artesian beer brewing in the Netherlands.</p>
+                </div>
+            </div>
+
+            <!-- Social Sharing Buttons with Logos -->
+            <div class="social-share">
+                <p>Share this page:</p>
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://www.dorpsedeugniet.com/" target="_blank" aria-label="Share on Facebook">
+                    <svg class="social-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M18 2H15C13.6739 2 12.4021 2.52678 11.4645 3.46447C10.5268 4.40215 10 5.67392 10 7V10H7V14H10V22H14V14H17L18 10H14V7C14 6.73478 14.1054 6.48043 14.2929 6.29289C14.4804 6.10536 14.7348 6 15 6H18V2Z" fill="currentColor"/>
+                    </svg>
+                </a>
+                <a href="https://twitter.com/intent/tweet?url=https://www.dorpsedeugniet.com/&text=Discover the finest artesian beer brewing in the Netherlands with Dorpsedeugniet!" target="_blank" aria-label="Share on Twitter">
+                    <svg class="social-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M23 3C22.0424 3.67548 20.9821 4.19215 19.86 4.53C19.2577 3.83757 18.4573 3.34675 17.567 3.12398C16.6767 2.90122 15.7395 2.95724 14.8821 3.28448C14.0247 3.61171 13.2884 4.19444 12.773 4.95376C12.2575 5.71309 11.9877 6.61237 12 7.53V8.53C10.2426 8.57559 8.50127 8.1858 6.93101 7.39547C5.36074 6.60513 4.01032 5.43867 3 4C3 4 -1 13 8 17C5.94053 18.398 3.48716 19.099 1 19C10 24 21 19 21 7.5C20.9991 7.22147 20.9723 6.94364 20.92 6.67C21.9406 5.66354 22.6608 4.39275 23 3Z" fill="currentColor"/>
+                    </svg>
+                </a>
+                <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://www.dorpsedeugniet.com/" target="_blank" aria-label="Share on LinkedIn">
+                    <svg class="social-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M16 8C17.5913 8 19.1174 8.63214 20.2426 9.75736C21.3679 10.8826 22 12.4087 22 14V21H18V14C18 13.4696 17.7893 12.9609 17.4142 12.5858C17.0391 12.2107 16.5304 12 16 12C15.4696 12 14.9609 12.2107 14.5858 12.5858C14.2107 12.9609 14 13.4696 14 14V21H10V14C10 12.4087 10.6321 10.8826 11.7574 9.75736C12.8826 8.63214 14.4087 8 16 8Z" fill="currentColor"/>
+                        <path d="M6 9H2V21H6V9Z" fill="currentColor"/>
+                        <path d="M4 2C3.46957 2 2.96086 2.21071 2.58579 2.58579C2.21071 2.96086 2 3.46957 2 4C2 4.53043 2.21071 5.03914 2.58579 5.41421C2.96086 5.78929 3.46957 6 4 6C4.53043 6 5.03914 5.78929 5.41421 5.41421C5.78929 5.03914 6 4.53043 6 4C6 3.46957 5.78929 2.96086 5.41421 2.58579C5.03914 2.21071 4.53043 2 4 2Z" fill="currentColor"/>
+                    </svg>
+                </a>
+            </div>
+        </section>
+
+        <section id="process" class="content-section">
+            <h2>The Dorpsedeugniet Brewing Process in the Netherlands</h2>
+            <p>From selecting the finest ingredients to the careful aging of our beers, every step of our process is handled with meticulous care and dedication in Reeuwijk, Netherlands. Our artesian brewing techniques ensure that each beer captures the essence of Dutch tradition while offering a modern twist for beer enthusiasts worldwide.</p>
+            <p>Learn more about our <a href="#beers">artesian brewing techniques</a> and what makes our beers stand out. Interested in visiting us? <a href="#contact">Get in touch</a> to arrange a tasting in Reeuwijk!</p>
+        </section>
+
+        <!-- Newsletter Signup Section -->
+        <section class="newsletter">
+            <h3>Stay Updated with Dorpsedeugniet</h3>
+            <p>Join our newsletter to receive updates on new beer releases, events in Reeuwijk, and exclusive offers for artesian beer lovers.</p>
+            <form action="mailto:jaspervdz@me.com" method="post" enctype="text/plain">
+                <input type="email" name="email" placeholder="Enter your email" required aria-required="true">
+                <button type="submit">Subscribe</button>
+            </form>
+        </section>
+
+        <section id="contact" class="content-section">
+            <h2>Contact Dorpsedeugniet</h2>
+            <p>Questions about our artesian beers? Interested in visiting Reeuwijk for a tasting? Reach out to us!</p>
+            <form class="contact-form" action="mailto:jaspervdz@me.com" method="post" enctype="text/plain" aria-label="Contact form">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required aria-required="true" placeholder="Enter your name">
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required aria-required="true" placeholder="Enter your email">
+
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" rows="4" required aria-required="true" placeholder="Type your message here"></textarea>
+
+                <button type="submit">Send Message</button>
+            </form>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2025 Dorpsedeugniet. All rights reserved.</p>
+        <p><a href="/sitemap.xml">Sitemap</a> | <a href="/privacy-policy.html">Privacy Policy</a></p>
+    </footer>
+
+</body>
+</html>
